test/integration/rstanarm/tdata/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tdata_betareg.stan

Syntax error in 'tdata_betareg.stan', line 1, column 2 to column 4, parsing error:
   -------------------------------------------------
     1:    if (prior_dist_z <= 2) hs_z = 0;
           ^
     2:    else if (prior_dist_z == 3) hs_z = 2;
     3:    else if (prior_dist_z == 4) hs_z = 4;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tdata_glm.stan

Syntax error in 'tdata_glm.stan', line 1, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    int<lower=0> len_z_T = 0;
           ^
     2:    int<lower=0> len_var_group = sum(p) * (t > 0);
     3:    int<lower=0> len_rho = sum(p) - t;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format tdata_mvmer.stan

Syntax error in 'tdata_mvmer.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // dimensions for hs priors
     2:    int<lower=0> yHs1 = get_nvars_for_hs(M > 0 ? y_prior_dist[1] : 0);
           ^
     3:    int<lower=0> yHs2 = get_nvars_for_hs(M > 1 ? y_prior_dist[2] : 0);
     4:    int<lower=0> yHs3 = get_nvars_for_hs(M > 2 ? y_prior_dist[3] : 0);
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


